# unthinking-depths

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Coverage.cmake
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md
engine/: CMakeLists.txt
engine/src/: abi.hpp  bot_iface.hpp  combat.cpp  combat.hpp  command.cpp  command.hpp  config.hpp  economy.cpp  economy.hpp  entity.hpp  file_io.cpp  file_io.hpp  fixed.cpp  fixed.hpp  frame.cpp  frame.hpp  grid.cpp  grid.hpp  ids.hpp  match.cpp  match.hpp  movement.cpp  movement.hpp  replay.cpp  replay.hpp  replay_io.cpp  replay_io.hpp  rng.cpp  rng.hpp  snapshot.cpp  snapshot.hpp  statehash.cpp  statehash.hpp  stats.cpp  stats.hpp  territory.cpp  territory.hpp  tick.cpp  tick.hpp  wincheck.cpp  (+3 more)
fixtures/: README.md  econ_bot.hpp  idle_bot.hpp  rush_bot.hpp
maps/: CMakeLists.txt  map_gen.cpp  map_gen.hpp  map_io.cpp  map_io.hpp  map_validate.cpp  map_validate.hpp
maps/data/: small_open.json  twin_peaks.json
runner/: CMakeLists.txt  README.md  wasm_bot.cpp  wasm_bot.hpp
sdk/cpp/: Makefile  bot_template.cpp  bot_template.wasm
sdk/cpp/examples/: idle_bot.cpp  idle_bot.wasm  rush_bot.cpp  rush_bot.wasm
sdk/cpp/include/: cstddef  cstdint  type_traits
sdk/cpp/include/sfbg/: types.hpp
sdk/cpp/include/ud/: types.hpp
tests/: CMakeLists.txt  test_bots.cpp  test_combat.cpp  test_determinism.cpp  test_file_io.cpp  test_ids.cpp  test_map_io.cpp  test_renderer.cpp  test_rng.cpp  test_territory.cpp  test_wasm_runner.cpp  test_world.cpp
tools/: CMakeLists.txt  README.md  gen_replay.cpp  sfbg_mapcheck.cpp  sfbg_mapgen.cpp  ud_mapcheck.cpp  ud_mapgen.cpp  ud_run.cpp
viz/: CMakeLists.txt  Makefile.em  README.md  ascii_out.cpp  ascii_out.hpp  imgui_main.cpp  main.cpp  main_nc.cpp  ncurses_out.cpp  ncurses_out.hpp  render.cpp  render.hpp  shell.html  web_main.cpp
