add_executable(gen_example_replay gen_replay.cpp)
target_link_libraries(gen_example_replay PRIVATE engine)
target_include_directories(gen_example_replay PRIVATE ${CMAKE_SOURCE_DIR}/fixtures)

add_executable(ud_mapgen ud_mapgen.cpp)
target_link_libraries(ud_mapgen PRIVATE maps_lib)

add_executable(ud_mapcheck ud_mapcheck.cpp)
target_link_libraries(ud_mapcheck PRIVATE maps_lib)
